# libraryManagementSystem

./: .gitignore  CMakeLists.txt  README.md
cmake/: Windows-x86.cmake
doc/: CMake安装教程.md
docs/: API_Reference.md  API_参考文档.md  README_zh-CN.md
header/: localization.h
src/: main.cpp
